--- a/assets/styles/components/footer.css
+++ b/assets/styles/components/footer.css
@@ -5,12 +5,19 @@
   } */
   footer {
     /* background-color: rgba(222, 216, 216, 0.929); */
-    background-color: rgb(194,189,179);
+    background-color: rgb(88, 151, 188);
     color: #000000;
     padding: 50px 0;
+
+}
    
-  }
   
+  footer .logo_original_footer{
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin: auto;
+  }
   .footer-social i {
     color: black;
   }
@@ -24,18 +31,8 @@
     color: black;
   
   }
-  
-  footer .logo-mybodydate {
-    margin-left: 50px;
-    width: 200px;
-    margin-bottom: 50px;
-  }
-  
-  .footer-social img{
-    width: 34px;
-    height: 34px;
-  }
-  
+
+
   .footer-content {
     width:85vw;
     margin: auto ;
@@ -106,6 +103,7 @@
     padding: 0;
     display: flex;
     justify-content: center;
+
   }
   
   .footer-social li {
@@ -113,7 +111,7 @@
   }
   
   .footer-social a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
     font-size: 1.5rem;
   }
@@ -139,10 +137,6 @@
     margin-right: 10px;
   } */
   
-  .footer-contact a {
-    color: #fff;
-    text-decoration: none;
-  }
   
   .copyright {
     text-align: center;
@@ -158,101 +152,8 @@
   
   
   }
-  .language{
-    width: 300px;
-  }
-  footer select {
-    width: 300px;
-  }
-  .langue-option {
-    padding-left: 20px;
-   
-  }
-  .langue-option img {
-    vertical-align: middle;
-    width: 20px;
-    height: 20px;
-    margin-right: 5px;
-  }
-  .img_flag{
-    width: 30px;
-    height:20px;
-  }
-  .img_flag img{
-    width: 100%;
-    height:100%;
-    padding-right: 10px;
-  }
+
   
-  .select_langue{
-    
-      height: 2.375rem;
-  width: 150px;
-      padding: 0px 0.75rem 0px 0.5rem;
-      border-radius: 1.25rem;
-      border: 1px solid transparent;
-      background-color: rgba(0, 0, 0, 0.29);
-      color: rgb(255, 255, 255);
-      backdrop-filter: blur(1.25rem);
-      display: flex;    justify-content: space-around;
-      -webkit-box-align: center;
-      align-items: center;
-      cursor: pointer;
-      transition: background-color 0.3s ease-out 0s, border-color 0.3s ease-out 0s;
-  }
-  
-  .language_fr,.language_en,.language_esp{
-    display: flex;
-  }
-  .list-lang{
-    display: none;
-  }
-  
-  .select_langue {
-    position: relative;
-  }
-  
-  .select_langue > li {
-    display: inline-block;
-    position: relative;
-    margin-right: 10px;
-    cursor: pointer;
-  }
-  
-  .select_langue ul.list_lang {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    padding: 0;
-    margin: 0;
-    padding: 0px 0.75rem 0px 0.5rem;
-    border-radius: 1.25rem;
-    border: 1px solid transparent;
-    background-color: rgba(0, 0, 0, 0.29);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
-    z-index: 999;
-    
-  }
-  
-  .select_langue ul.list_lang li {
-    display: block;
-    padding: 10px;
-    border-bottom: 1px solid #ccc;
-  }
-  
-  .select_langue ul.list_lang li:last-child {
-    border-bottom: none;
-  }
-  
-  
-  
-  .select_langue .img_flag {
-    display: inline-block;
-    width: 30px;
-    height: 20px;
-    margin-right: 5px;
-  }
   
   @media screen and (max-width: 800px) {
     .footer-content {
