--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,6 +4,7 @@
 @import url(/assets/styles/components/form.css);
 @import url(/assets/styles/components/destination.css);
 @import url(/assets/styles/components/footer.css);
+@import url(/assets/styles/components/astuce.css);
 *{
     margin: 0;
     padding: 0;
@@ -17,3 +18,16 @@ body{
     color: red;
     /* Ajoutez d'autres styles CSS si nécessaire */
   }
+
+  html,body{
+    height: 100%;
+}
+  
+  body {
+  display: flex;
+  flex-direction:column;
+}
+  
+.content {
+    flex-grow:1;
+}
