--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -83,46 +83,51 @@
 
 
 						<a href="{{ path('article', {'id': 1}) }}" class="btn">En savoir plus</a>
-					</a>
+
+					</div>
 				</div>
+				<div class="card_article"><img src="{{ asset('images/comino_malte.jpg') }}" alt="comino_malte"><div class="info">
+						<h3 class="titleImg">
+							Blue Lagoon<br>
+							<br></a>
+					</h3>
+
+					<a href="{{ path('article', {'id': 1}) }}" class="btn">En savoir plus</a>
+
+				</div>
+
 			</div>
-			<div class="card_article"><img src="{{ asset('images/comino_malte.jpg') }}" alt="comino_malte"><div class="info">
+
+			<div class="card_article"><img src="{{ asset('images/desert_dubai1.jpg') }}" alt="desertdubai"><div class="info">
 					<h3 class="titleImg">
-						Blue Lagoon<br>
-						<br></a>
-				</h3>
-
-				<a href="{{ path('article', {'id': 1}) }}" class="btn">En savoir plus</a>
-
-			</div>
-		</div>
-		<div class="card_article"><img src="{{ asset('images/desert_dubai1.jpg') }}" alt="desertdubai"><div class="info">
-				<h3 class="titleImg">
 						Desert de Dubai<br>
 						<br></a>
-				
+
 				</h3>
 				<a href="{{ path('article', {'id': 2}) }}" class="btn">En savoir plus</a>
 			</div>
-		</div>
-	</div>
-</div></section><section id="intro-astuces">
-<h2>
-	Organisez et Partez en Toute Confiance !
-</h2>
-<div class="container_flex">
-	<div class="block-description">
-		<p>Découvrez des précieux conseils et astuces pour voyager en toute confiance. Que vous soyez un voyageur aguerri ou débutant, les conseils et le partage d'experiences sont toujours la bienvenue.
-		</p>
-		<p>
-			Je vous propose des informations pratiques pour planifier votre itinéraire, économiser de l'argent, choisir le meilleur hébergement et faire face aux imprévus.
-		</p>
-		<div class="block-btn-read-more">
-			<a href="" class="btn-read-more">En savoir plus</a>
-		</div>
+		</section>
 
 
-	</div>
-	<div class="img-block-description"><img src="{{ asset('images/home-preparatif.jpeg') }}">
-	</div>
-</div></section></main>{% endblock %}
+		<section id="intro-astuces">
+			<h2>
+				Organisez et Partez en Toute Confiance !</h2>
+			<div class="container_flex">
+				<div class="block-description">
+					<p>Découvrez des précieux conseils et astuces pour voyager en toute confiance. Que vous soyez un voyageur aguerri ou débutant, les conseils et le partage d'experiences sont toujours la bienvenue.
+					</p>
+					<p>
+						Je vous propose des informations pratiques pour planifier votre itinéraire, économiser de l'argent, choisir le meilleur hébergement et faire face aux imprévus.
+					</p>
+					<div class="block-btn-read-more">
+						<a href="" class="btn-read-more">En savoir plus</a>
+					</div>
+
+
+				</div>
+				<div class="img-block-description"><img src="{{ asset('images/home-preparatif.jpeg') }}">
+				</div>
+			</div>
+		</section>
+	</main>
+{% endblock %}
