--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -58,7 +58,7 @@
 			</li>
 
 			<li class="lien">
-				<a href="" class="lien">Astuces & Préparatifs</a>
+				<a href="{{ path("show_astuce") }}" class="lien">Astuces & Préparatifs</a>
 			</li>
 			<li class="lien">
 				<a href=""class="lien">À propos</a>
