--- a/templates/admin/show_dashboard.html.twig
+++ b/templates/admin/show_dashboard.html.twig
@@ -81,7 +81,7 @@
 									<i class="fa-sharp fa-solid fa-pen-to-square" style="color: #3fb116;"></i>
 									Modifier
 								</a>
-								<a href="" class="" title="Supprimer">
+								<a href="{{ path('hard_delete_article', {'id': article.id}) }}" class="" title="Supprimer">
 									<i class="fa-solid fa-trash" style="color: #f02000;"></i>
 								</a>
 							</td>
