--- a/templates/include/_footer.html.twig
+++ b/templates/include/_footer.html.twig
@@ -1,13 +1,14 @@
 <!-- ***********************FOOTER********************** -->
 <footer>
-<img class="logo_original_footer" src="{{ asset('images/logo_one_world-no-bg.png') }}" alt="logo-one_world">
 
 	
 
 
 
 <div class="footer-content">
-	<div class="footer-about">
+<img class="logo_original_footer" src="{{ asset('images/logo_one_world-no-bg.png') }}" alt="logo-one_world">
+
+	{# <div class="footer-about">
 
 		<h3>One World</h3>
 		<ul>
@@ -19,7 +20,7 @@
 
 		</ul>
 
-	</div>
+	</div> #}
 <div class="footer-social">
 		<h3>Me suivre</h3>
 		<ul>
