--- a/templates/astuce/astuces&preparatifs.html.twig
+++ b/templates/astuce/astuces&preparatifs.html.twig
@@ -13,58 +13,72 @@
 
 	<main>
 
-<section class="section-animation">
+		<section id="preparerdoc">
 
 			<div class="container_flex">
 				<div class="block-description">
 					<h2>
-						Organisez et Partez en Toute Confiance !</h2>
-					<p>Découvrez des précieux conseils et astuces pour voyager en toute confiance. Que vous soyez un voyageur aguerri ou débutant, les conseils et le partage d'experiences sont toujours la bienvenue.
+						Préparez ses documents  !</h2>
+					<p>Avant de voyager, informez-vous sur les exigences spécifiques du pays que vous allez visiter. Consultez les sites officiels des ambassades ou des consulats pour connaître les conditions d'entrée, les visas nécessaires, les vaccins obligatoires, les restrictions de voyage et les informations sur la sécurité.</p>
+					<p>Notez également les coordonnées des ambassades ou consulats locaux au cas où vous auriez besoin d'aide pendant votre séjour.
 					</p>
 					<p>
-						Je vous propose des informations pratiques pour planifier votre itinéraire, économiser de l'argent, choisir le meilleur hébergement et faire face aux imprévus.
+						Avant de partir en voyage, il est judicieux de scanner tous vos documents importants tels que votre passeport, votre visa, vos billets d'avion, vos réservations d'hôtel, vos cartes d'identité et vos cartes de crédit. En cas de perte ou de vol, vous pourrez facilement accéder aux copies numériques de ces documents depuis n'importe quel appareil connecté à Internet.
 					</p>
 
 				</div>
-				<div class="img-block-description"><img src="{{ asset('images/home-preparatif.jpeg') }}">
+				<div class="img-block-description"><img src="{{ asset('images/doc-visa.jpeg') }}">
 				</div>
 			</div>
 		</section>
 
-<section class="section-animation">
+		<section class="section-animation">
 
 			<div class="container_flex">
-				<div class="img-block-description"><img src="{{ asset('images/home-preparatif.jpeg') }}">
+				<div class="img-block-description"><img src="{{ asset('images/paiement.jpg') }}">
 				</div>
 				<div class="block-description">
 					<h2>
-						Organisez et Partez en Toute Confiance !</h2>
-					<p>Découvrez des précieux conseils et astuces pour voyager en toute confiance. Que vous soyez un voyageur aguerri ou débutant, les conseils et le partage d'experiences sont toujours la bienvenue.
+						Préparer vos moyens de paiements
+					</h2>
+					<p>Avant votre départ, informez votre banque de vos dates de voyage et des destinations prévues. Cela évitera que vos transactions ou retraits d'argent ne soient bloqués en raison d'activités suspectes.
+					</p>
+					<p>je vous recommande d'emporter une carte de crédit de secours au cas où votre carte principale serait perdue, volée ou bloquée. Assurez-vous de conserver cette carte séparément de votre carte principale pour des raisons de sécurité..
 					</p>
 					<p>
-						Je vous propose des informations pratiques pour planifier votre itinéraire, économiser de l'argent, choisir le meilleur hébergement et faire face aux imprévus.
+						Il est toujours bon d'avoir un peu d'argent liquide sur vous, surtout dans les régions où les cartes de crédit ne sont pas acceptées partout. Assurez-vous de vous renseigner sur la devise locale et de prévoir une quantité suffisante d'argent liquide pour vos besoins immédiats.
 					</p>
 
 				</div>
 			</div>
 		</section>
 
-<section class="section-animation">
-		<div class="container_flex">
-			<div class="block-description">
-				<h2>
-					Organisez et Partez en Toute Confiance !</h2>
-				<p>Découvrez des précieux conseils et astuces pour voyager en toute confiance. Que vous soyez un voyageur aguerri ou débutant, les conseils et le partage d'experiences sont toujours la bienvenue.
-				</p>
-				<p>
-					Je vous propose des informations pratiques pour planifier votre itinéraire, économiser de l'argent, choisir le meilleur hébergement et faire face aux imprévus.
-				</p>
+		<section class="section-animation">
+			<div class="container_flex">
+				<div class="block-description">
+					<h2>
+						Assurance de Voyage </h2>
+					<p>Une assurance voyage peut vous protéger en cas d'annulation de voyage, de problèmes de santé, de perte de bagages ou d'autres situations imprévues. Vérifiez les options d'assurance voyage disponibles et choisissez celle qui convient le mieux à vos besoins.
+					</p>
+					<p>
+						
+					</p>
+					<p>
+						
+					</p>
+					<p>
+						
+					</p>
+					<p>
+						Avant de souscrire une assurance voyage, lisez les avis et les recommandations d'autres voyageurs pour avoir une idée de la qualité du service et de la fiabilité de l'assureur.
+					</p>
 
 
+				</div>
+				<div class="img-block-description"><img src="{{ asset('images/assurance.jpg') }}">
+				</div>
 			</div>
-			<div class="img-block-description"><img src="{{ asset('images/home-preparatif.jpeg') }}">
-			</div>
-		</div>
-	</section>
+		</section>
 
-</main>{% endblock %}
+	</main>
+{% endblock %}
