--- a/templates/include/_footer.html.twig
+++ b/templates/include/_footer.html.twig
@@ -57,27 +57,25 @@
 	<!-- <h3>Liens utiles</h3> -->
 	<ul>
 		
+	
+		
 		<li class="separateur">|</li>
 		<li>
-			<a href="RGPD.html">RGPD</a>
+	<a href="{{ path('app_cookie') }}">Cookies</a>
 		</li>
 		<li class="separateur">|</li>
 		<li>
-			<a href="cookies.html">Cookies</a>
-		</li>
-		<li class="separateur">|</li>
-		<li>
-			<a href="mentions_legales.html">
+		<a href="{{ path('app_mentions_legales') }}">
 				Mentions légales
 			</a>
 		</li>
 		<li class="separateur">|</li>
 		<li>
-			<a href="confidantialite.html">Politique de confidentialité</a>
+			<a href="{{ path('app_politique_confidentialite') }}">Politique de confidentialité</a>
 		</li>
 		<li class="separateur">|</li>
 		<li>
-			<a href="cgu.html">Conditions générales d'utilisations</a>
+	<a href="{{ path('app_conditions_generales') }}">Conditions générales d'utilisations</a>
 		</li>
 		<li class="separateur">|</li>
 
