--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -61,7 +61,7 @@
 				<a href="{{ path("show_astuce") }}" class="lien">Astuces & Préparatifs</a>
 			</li>
 			<li class="lien">
-				<a href=""class="lien">À propos</a>
+				<a href="{{ path("show_apropos") }}"class="lien">À propos</a>
 			</li>
 			{% if not app.user %}
 				<li class="lien">
