--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -6,6 +6,8 @@
 @import url(/assets/styles/components/footer.css);
 @import url(/assets/styles/components/astuce.css);
 @import url(/assets/styles/components/articles.css);
+@import url(/assets/styles/components/apropos.css);
+@import url(/assets/styles/components/conditions.css);
 *{
     margin: 0;
     padding: 0;
@@ -65,4 +67,9 @@ body{
 
 .alert-inner--text {
   /* Styles pour le texte du flash */
+}
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
