--- a/assets/styles/components/articles.css
+++ b/assets/styles/components/articles.css
@@ -1,3 +1,38 @@
+.content-wrapper{
+
+ width: 85vw;
+ display: block;
+ margin: auto;
+}
+.container-article{
+margin-top: 200px;
+}
+.img-article-portrait{
+  display: block;
+  margin: auto;
+width: 400px;
+  height: 500px;
+margin-top: 80px;
+margin-bottom: 80px;
+}
+.img-article-portrait img{
+
+  width: 100%;
+  height: 100%;
+}
+#description_articles {
+  width: 80vw;
+  display: block;
+  margin: auto;
+  margin-bottom: 120px;
+}
+
+
+
+
+
+
+
 .comment-section {
 
     width: 100%;
