--- a/assets/styles/components/form.css
+++ b/assets/styles/components/form.css
@@ -115,6 +115,7 @@
     cursor: pointer;
     background-color: rgb(26, 94, 241);
     color: white;
+    padding: 15px;
 }
 .form-group-terms{
     display: flex;
@@ -269,3 +270,59 @@ table td a:hover {
 .img-custom{
     object-fit: contain;
   } */
+
+/*---------------------CONTACT FORM------------*/
+form.contact-form {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  form.contact-form label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  form.contact-form input[type="text"],
+  form.contact-form input[type="email"],
+  form.contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  form.contact-form textarea {
+    height: 150px;
+  }
+  
+  form.contact-form input[type="submit"] {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+  }
+  
+
+
+  
+  form.contact-form .success-message {
+    color: #4caf50;
+    margin-top: 10px;
+  }
+  
+  form.contact-form .error-message {
+    color: #f44336;
+    margin-top: 10px;
+  }
+  
