--- a/templates/article_details/article_details.html.twig
+++ b/templates/article_details/article_details.html.twig
@@ -1,28 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Détails de l'article{% endblock %}
+{% block title %}Détails de l'article
+{% endblock %}
 
 {% block body %}
-    <h1>Détails de l'article</h1>
 
-    <h2>{{ article.title }}</h2>
-    <p>{{ article.content }}</p>
+	<section class="content-wrapper">
 
-    <div class="comment-section">
-        <h2>Commentaires</h2>
-        {% for comment in article.comments %}
-            <div class="comment">
-                <p class="author">Par {{ comment.getPseudo }} le {{ comment.createdAt|date('d/m/Y H:i') }}</p>
-                <p class="content">{{ comment.content }}</p>
-            </div>
-        {% endfor %}
+		<div class="container-article">
+			<h1>{{ article.title }}</h1>
+			<div class='img-article-portrait'>
+				<img src="{{ asset('uploads/' ~ article.image) }}" alt="{{ article.title }}"></div>
+			<section id="description_country">
+				<p>{{ article.content }}</p>
+			</section>
+			<div class="comment-section">
+				<h2>Commentaires</h2>
+				{% for comment in article.comments %}
+					<div class="comment">
+						<p class="author">Par
+							{{ comment.getPseudo }}
+							le
+							{{ comment.createdAt|date('d/m/Y H:i') }}</p>
+						<p class="content">{{ comment.content }}</p>
+					</div>
+				{% endfor %}
 
-        <div class="comment-form">
-            <h2>Laisser un commentaire</h2>
-            {{ form_start(form) }}
-            {{ form_row(form.content) }}
-            {{ form_row(form.submit) }}
-            {{ form_end(form) }}
-        </div>
-    </div>
+				<div class="comment-form">
+					<h2>Laisser un commentaire</h2>
+					{{ form_start(form) }}
+					{{ form_row(form.content) }}
+					{{ form_row(form.submit) }}
+					{{ form_end(form) }}
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
