--- a/templates/user/register_form.html.twig
+++ b/templates/user/register_form.html.twig
@@ -5,65 +5,40 @@
 
 {% block body %}
 
-    <section class="bg-register" style="background-image: url('{{ asset('images/bg-register.jpeg') }}');">
+	<section class="bg-register" style="background-image: url('{{ asset('images/bg-register.jpeg') }}');">
 
-        <div class="block_form">
-            <div class="groupform">
-                <div class="formular">
-                    <form method="post">
-                        <h3 class="">Inscrivez-vous !</h3>
-                        <hr>
-                        {{ form_start(form) }}
+		<div class="block_form">
+			<div class="groupform">
+				<div class="formular">
+					<form method="post">
+						<h3 class="">Inscrivez-vous !</h3>
+						<hr>
+						{{form_start(form)}}
 
-                        <div class="groupform1">
-                            <div class="block-input">
-                                {{ form_row(form.firstname) }}
-                                {% if form_errors(form.firstname) %}
-                                    <div class="error">
-                                        {{ form_errors(form.firstname) }}
-                                    </div>
-                                {% endif %}
-                            </div>
-                            <div class="block-input">
-                                {{ form_row(form.lastname) }}
-                                {% if form_errors(form.lastname) %}
-                                    <div class="error">
-                                        {{ form_errors(form.lastname) }}
-                                    </div>
-                                {% endif %}
-                            </div>
-                        </div>
-                        <div class="groupform2">
-                            <div class="block-input">
-                                {{ form_row(form.pseudo) }}
-                                {% if form_errors(form.pseudo) %}
-                                    <div class="error">
-                                        {{ form_errors(form.pseudo) }}
-                                    </div>
-                                {% endif %}
-                            </div>
-                            <div class="block-input">
-                                {{ form_row(form.email) }}
-                                {% if form_errors(form.email) %}
-                                    <div class="error">
-                                        {{ form_errors(form.email) }}
-                                    </div>
-                                {% endif %}
-                            </div>
-                        </div>
-                        <div class="block-input">
-                            {{ form_row(form.password) }}
-                            {% if form_errors(form.password) %}
-                                <div class="error">
-                                    {{ form_errors(form.password) }}
-                                </div>
-                            {% endif %}
-                        </div>
-                        <input class="btn_register" type="submit" value="Inscription">
-                        {{ form_end(form) }}
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
+						<div class="groupform1">
+							<div class="block-input">{{form_row(form.firstname)}}</div>
+							<div class="block-input">{{form_row(form.lastname)}}</div>
+						</div>
+						<div class="groupform2">
+							<div class="block-input">{{form_row(form.pseudo)}}</div>
+							<div class="block-input">{{form_row(form.email)}}</div>
+
+						</div>
+						<div class="block-input">{{form_row(form.password)}}</div>
+						{# <div class="form-group-terms">
+							<input type="checkbox" id="terms" name="terms">
+							<label for="terms">J'accepte vos
+								<a href="cgu.html">Conditions d'utilisation</a>
+								et votre
+								<a href="confidentialite.html">politique de confidentialité</a>, je consens à ce que mes
+																	                            données personnelles soient traitées conformément au
+								<a href="RGPD.html">RGPD</a>.</label>
+						</div> #}
+						<input class="btn_register" type="submit" value="Inscription">
+						{{form_end(form)}}
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
