--- a/templates/article_details/article_details.html.twig
+++ b/templates/article_details/article_details.html.twig
@@ -4,7 +4,9 @@
 {% endblock %}
 
 {% block body %}
+<nav class='navbg'>
 
+</nav>
 	<section class="content-wrapper">
 
 		<div class="container-article">
