--- a/templates/admin/country/create.html.twig
+++ b/templates/admin/country/create.html.twig
@@ -1,22 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajouter une Déstination
-{% endblock %}
+{% block title %}Ajouter une Destination{% endblock %}
 
 {% block body %}
-
+<nav class='navbg'>
+  <!-- Votre navigation -->
+</nav>
+<div class="containerform">
+  <div class="headerform">
     {% if category is not defined  %}
-        <h1 class="text-center my-3">Ajouter une destination</h1>
+      <h1 class="title">Ajouter une destination</h1>
     {% else %}
-        <h1 class="text-center my-3">Modifier la destination {{ country.title }}</h1>
+      <h1 class="title">Modifier la destination {{ country.title }}</h1>
     {% endif %}
+  </div>
 
-    <div class="country-form ">
-        <div class="col-4 mx-auto">
-
-            {{ form(form) }}
-
-        </div>
+  <div class="form-container">
+    <div class="form-wrapper">
+      {{ form_start(form) }}
+      <div class="form-group">
+        {{ form_label(form.title) }}
+        {{ form_widget(form.title) }}
+      </div>
+      <div class="form-group">
+        {{ form_label(form.description) }}
+        {{ form_widget(form.description) }}
+      </div>
+      <div class="form-group">
+        {{ form_label(form.image) }}
+        {{ form_widget(form.image) }}
+      </div>
+      <div class="form-group">
+        {{ form_widget(form.submit, { 'attr': {'class': 'submit-button'} }) }}
+      </div>
+      {{ form_end(form) }}
     </div>
+  </div>
+</div>
 
 {% endblock %}
